fix(core): inputs en text rendering optimizeLegibility

--- a/src/core/styles/reset/module/_inputs.scss
+++ b/src/core/styles/reset/module/_inputs.scss
@@ -8,6 +8,6 @@
   select,
   textarea {
     @include font-family;
-    text-rendering: optimizeSpeed;
+    text-rendering: optimizeLegibility;
   }
 }
